i added latest product cards

--- a/index.html
+++ b/index.html
@@ -25,13 +25,51 @@
                 <h3><strong><span>New</span> <br>Product!</strong></h3>
             </div>
         </div>
-        <p>Introducing our <strong>latest product,</strong>design to make your life easier and more efficient.
-        </p>
-        <ul>
-            <li>Feature 1</li><br>
-            <li>Feature 2</li><br>
-            <li>Feature 3</li><br>
-        </ul>
+        <section class="latest-product">
+            <center>
+                <h2>Latest Products</h2>
+                <p>Introducing our <strong>latest product,</strong>design to make your life easier and more efficient.
+            </center>
+            </p>
+            <div class="card-wrapper">
+                <div class="card">
+                    <img src="images/images (10).jpg" class="card-img" alt="">
+                    <div>
+                        <center>
+                        <h5>Flacon</h5>
+                        <p>price: &#8358; 1,500</p>
+                    </center>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/images (2).jpg" class="card-img" alt="">
+                    <div>
+                        <center>
+                        <h5>Rose energy drink</h5>
+                        <p>price: &#8358; 2000</p>
+                    </center>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/images (8).jpg" class="card-img" alt="">
+                    <div>
+                        <center>
+                        <h5>Zealth Bodywash</h5>
+                        <p>price: &#8358; 2100</p>
+                    </center>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/images (9).jpg" class="card-img" alt="">
+                    <div>
+                        <center>
+                            <h5>Flasket</h5>
+                            <p>price: &#8358; 3000</p>
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </section>
         <h4>Order now!</h4>
         <form>
             <label>size:</label>
